collections done with mvvm and rx(1st fixes)